--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,33 @@
+#holder
+{
+display: flex;
+justify-content: space-between;
+font-size: 50px;
+}
 
+#item1{
+    height: 100px;
+    width: 100px;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#item2{
+    height: 100px;
+    width: 100px;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#item3{
+    height: 100px;
+    width: 100px;
+    background-color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* Your CSS Code here. */
